added changes on menu and background audio

--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
   <body>
     <nav id="movies">
       <ul>
-        <li data-episode-url="http://swapi.co/api/films/4/">Episode I</li>
-        <li data-episode-url="http://swapi.co/api/films/5/">Episode II</li>
-        <li data-episode-url="http://swapi.co/api/films/.../">Episode ...</li>
       </ul>
     </nav>
 
@@ -45,7 +42,10 @@
         </pre>
       </div>
     </div>
-
+    <audio autoplay loop>
+      <source src="https://r6---sn-bg07dnes.googlevideo.com/videoplayback?requiressl=yes&amp;mime=audio%2Fwebm&amp;clen=2441962&amp;ipbits=0&amp;fvip=3&amp;keepalive=yes&amp;c=WEB&amp;pl=48&amp;source=youtube&amp;sparams=clen,dur,ei,expire,gir,id,initcwndbps,ip,ipbits,itag,keepalive,lmt,mime,mip,mm,mn,ms,mv,pl,requiressl,source&amp;ip=45.77.200.244&amp;lmt=1521381759050294&amp;ei=EGriWuSVA4u38wSYl6hg&amp;fexp=23724337&amp;id=o-AOIvyqS9DVz1pyIGcpKkOJZyaaz_HfVK_eNMqq92ebcx&amp;expire=1524809328&amp;key=cms1&amp;itag=249&amp;gir=yes&amp;dur=351.281&amp;signature=533B928CE1115D97835C7B875690607027999B00.3005C11FE009E99149FAC5B1F743BA97957ED1CD&amp;ratebypass=yes&amp;title=Star+Wars+Main+Theme+%28Full%29&amp;title=Star+Wars+Main+Theme+%28Full%29&amp;mip=2804:14c:5b91:a01c:e8b0:6818:b835:dd9b&amp;redirect_counter=1&amp;cm2rm=sn-oxunxg8pjvn-jo4s7l&amp;req_id=b1084c57d608a3ee&amp;cms_redirect=yes&amp;mm=29&amp;mn=sn-bg07dnes&amp;ms=rdu&amp;mt=1524789946&amp;mv=m" type="audio/webm">
+    </audio>
+    <script src="jquery-3.3.1.min.js"></script>
     <script src="starwars.js" charset="utf-8"></script>
     <script src="restart-animation.js" charset="utf-8"></script>
   </body>
